--- a/src/components/menu-item/menu-item.component.html
+++ b/src/components/menu-item/menu-item.component.html
@@ -1,14 +1,14 @@
-<div class="min-w-52 max-w-4xl mx-auto p-4 rounded-lg bg-gray-100 text-black">
-  <div class="rounded mb-2">
-    <img [imageDialog]="menuItem().name" [src]="menuItem().imageUrl" [alt]="menuItem().name" />
+<div class="min-w-52 max-w-4xl mx-auto rounded-lg bg-gray-100 text-black">
+  <img class="rounded-t-lg mb-2" [imageDialog]="menuItem().name" [src]="menuItem().imageUrl" [alt]="menuItem().name" />
+  <div class="p-4">
+    <h1 class="text-2xl font-bold">{{ menuItem().name }}</h1>
+    <p class="text-lg">{{ menuItem().description }}</p>
+    <p class="text-lg font-bold">{{ menuItem().price | currency }}</p>
+    <!-- <button
+      class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
+      (click)="addToCart(menuItem())"
+    >
+      Add to Cart
+    </button> -->
   </div>
-  <h1 class="text-2xl font-bold">{{ menuItem().name }}</h1>
-  <p class="text-lg">{{ menuItem().description }}</p>
-  <p class="text-lg font-bold">{{ menuItem().price | currency }}</p>
-  <!-- <button
-    class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded"
-    (click)="addToCart(menuItem())"
-  >
-    Add to Cart
-  </button> -->
 </div>
