--- a/src/components/image-dialog/image-dialog.component.html
+++ b/src/components/image-dialog/image-dialog.component.html
@@ -1,4 +1,5 @@
-<div class="flex justify-center h-full">
+<div class="h-full">
+  <!-- <div class="absolute right-0 top-0"> -->
   <img
     class="object-cover h-full"
     [src]="data.src"
