--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,3 +20,7 @@ html {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+// * {
+//   outline: 1px red solid;
+// }
