--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,4 +1,49 @@
-<div class="bg-cyan-100 text-black grid grid-cols-2 p-8">
-  <div>Links</div>
-  <div>Socials</div>
+<div class="bg-cyan-100 text-black grid grid-cols-2 xl:p-8 lg:p-6 p-4">
+	<div class="lg:col-span-1 col-span-2">
+		<p class="lg:text-2xl: md:text-xl text-lg font-bold">HOURS</p>
+		<p class="mb-2">
+			Monday: Closed
+			<br />
+			Tuesday - Saturday: 10 am - 9 pm
+			<br />
+			Sun: 10 am - 8 pm
+			<br />
+			Closed On Holidays
+		</p>
+		<p class="lg:text-2xl: md:text-xl text-lg font-bold">FIND US</p>
+		<p>
+			1445 15 Mile Rd, Sterling Heights, MI 48312
+			<br />
+			(586) 883-6071
+			<br />
+			{{ "Harucafe26@gmail.com" }}
+		</p>
+		<div class="mt-4 flex gap-4">
+			<a
+				href="https://www.facebook.com/profile.php?id=100093658072720&mibextid=ZbWKwL"
+				target="_blank">
+				<button
+					mat-icon-button
+					matTooltip="Facebook">
+					<img
+						src="images/Facebook_Logo_Primary.png"
+						alt="Facebook" />
+				</button>
+			</a>
+			<a
+				href="https://www.instagram.com/haru_cafe_mi/"
+				target="_blank">
+				<button
+					mat-icon-button
+					matTooltip="Instagram">
+					<img
+						src="svgs/instagram.svg"
+						alt="Instagram" />
+				</button>
+			</a>
+		</div>
+	</div>
+	<div class="lg:col-span-1 lg:block hidden">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2939.144819463492!2d-83.01385428813576!3d42.55221772281936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8824db247b15df3d%3A0xd1a9dc8a24c68bc2!2sHaru%20Cafe!5e0!3m2!1sen!2sus!4v1738088230849!5m2!1sen!2sus" width="400" height="400" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
 </div>
