--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+@use 'styles/rotate.scss';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -24,3 +25,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 // * {
 //   outline: 1px red solid;
 // }
+
+.bg-salmon {
+  background-color: #FFDADA;
+}
