added tiktok and removed invalid images

--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -4,9 +4,9 @@
 		<p class="mb-2">
 			Monday: Closed
 			<br />
-			Tuesday - Saturday: 10 am - 9 pm
+			Tuesday - Saturday: 10 am - 8:30 pm
 			<br />
-			Sun: 10 am - 8 pm
+			Sunday: 10 am - 8 pm
 			<br />
 			Closed On Holidays
 		</p>
@@ -39,6 +39,17 @@
 					<img
 						src="svgs/instagram.svg"
 						alt="Instagram" />
+				</button>
+			</a>
+      <a
+				href="https://www.tiktok.com/@haru.cafe5"
+				target="_blank">
+				<button
+					mat-icon-button
+					matTooltip="TikTok">
+					<img
+						src="svgs/tiktok.svg"
+						alt="TikTok" />
 				</button>
 			</a>
 		</div>
