changed cartoon to manga

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -42,7 +42,7 @@
 			<hr class="border-black border xl:my-8 lg:my-6 md:my-4 my-2" />
 			<div class="xl:my-8 lg:my-6 md:my-4 my-2">
 				<div class="xl:text-6xl lg:text-4xl md:text-2xl text-lg text-center">FRESH JUICE</div>
-				<div class="xl:text-6xl lg:text-4xl md:text-2xl text-lg text-center">& CARTOONS</div>
+				<div class="xl:text-6xl lg:text-4xl md:text-2xl text-lg text-center">& MANGA</div>
 			</div>
 			<hr class="border-black border xl:my-8 lg:my-6 md:my-4 my-2" />
 		</div>
