image dialog closes if clicked anywhere

--- a/src/components/image-dialog/image-dialog.component.html
+++ b/src/components/image-dialog/image-dialog.component.html
@@ -1,4 +1,4 @@
-<div class="h-full">
+<div class="h-full" (click)="dialog.close()">
   <!-- <div class="absolute right-0 top-0"> -->
   <img
     class="object-cover h-full"
