updated index.html links + small edits

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="bg-salmon xl:h-[95vh] lg:h-[80vh] sm:h-[60vh] h-[40vh] flex flex-col">
 	<!-- header links -->
 	<div class="flex justify-between xl:m-8 lg:m-6 m-4">
-		<div class="font-bold sm:text-xl text-lg text-normal">HARU CAFE</div>
+		<a class="font-bold sm:text-xl text-lg text-normal" href="" target="_self">HARU CAFE</a>
 		<div class="flex xl:gap-8 lg:gap-6 gap-4">
 			<a
 				class="hover:border-b hover:border-offset-4 border-black"
