added anime drinks, and size and temp flair

--- a/src/components/app/app.component.html
+++ b/src/components/app/app.component.html
@@ -2,7 +2,12 @@
 <div class="bg-salmon xl:h-[95vh] lg:h-[80vh] sm:h-[60vh] h-[40vh] flex flex-col">
 	<!-- header links -->
 	<div class="flex justify-between xl:m-8 lg:m-6 m-4">
-		<a class="font-bold sm:text-xl text-lg text-normal" href="" target="_self">HARU CAFE</a>
+		<a
+			class="font-bold sm:text-xl text-lg text-normal"
+			href=""
+			target="_self"
+			>HARU CAFE</a
+		>
 		<div class="flex xl:gap-8 lg:gap-6 gap-4">
 			<a
 				class="hover:border-b hover:border-offset-4 border-black"
@@ -23,8 +28,7 @@
 	</div>
 	<div class="grid grid-cols-12 h-full">
 		<!-- spinning logo -->
-		<div
-			class="relative w-full h-full sm:col-span-6 col-span-5 sm:col-start-1 col-start-2">
+		<div class="relative w-full h-full sm:col-span-6 col-span-5 sm:col-start-1 col-start-2">
 			<div class="absolute top-0 left-0 w-full h-full flex justify-center items-center">
 				<img
 					class="scale-50"
@@ -69,6 +73,12 @@
 <div
 	id="menu"
 	class="bg-cyan-50 lg:px-40 md:px-20 px-4 lg:py-8 py-4 flex flex-col gap-8">
+	<div class="mx-auto flex gap-3 bg-cyan-100 p-4 rounded-lg">
+		<mat-icon class="text-cyan-600">
+      <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#00dddd"><path d="M640-80q-100 0-170-70t-70-170q0-100 70-170t170-70q100 0 170 70t70 170q0 100-70 170T640-80Zm0-80q66 0 113-47t47-113q0-66-47-113t-113-47q-66 0-113 47t-47 113q0 66 47 113t113 47Zm-480 0q-33 0-56.5-23.5T80-240v-304q0-8 1.5-16t4.5-16l80-184h-6q-17 0-28.5-11.5T120-800v-40q0-17 11.5-28.5T160-880h280q17 0 28.5 11.5T480-840v40q0 17-11.5 28.5T440-760h-6l66 152q-19 10-36 21t-32 25l-84-198h-96l-92 216v304h170q5 21 13.5 41.5T364-160H160Zm480-440q-42 0-71-29t-29-71q0-42 29-71t71-29v200q0-42 29-71t71-29q42 0 71 29t29 71H640Z"/></svg>
+    </mat-icon>
+    <p>Oat milk is available upon request</p>
+	</div>
 	<div class="text-center lg:text-2xl: md:text-xl text-lg font-bold">ORDER</div>
 	<div class="flex justify-center gap-4">
 		<a
