--- a/src/components/footer/footer.component.html
+++ b/src/components/footer/footer.component.html
@@ -1,7 +1,8 @@
 <div class="bg-cyan-200 text-black grid grid-cols-2 xl:p-8 lg:p-6 p-4">
-	<div class="lg:col-span-1 col-span-2">
+	<div class="lg:col-span-1 col-span-2 flex flex-col gap-2">
+		<p>Ask about our gift cards!</p>
 		<p class="lg:text-2xl: md:text-xl text-lg font-bold">HOURS</p>
-		<p class="mb-2">
+		<p>
 			Monday: Closed
 			<br />
 			Tuesday - Saturday: 10 am - 8:30 pm
